--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -16,6 +16,7 @@ name: auto-release
 on:
   schedule:
     - cron: '20 1 * * 1'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +25,8 @@ jobs:
       with:
         fetch-depth: '0'
     - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.26.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v5.1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        default_bump: minor
