chore: add macos check for casing conflicts (#610)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,4 +46,17 @@ jobs:
             - name: Run Tests
               run: |
                 bash generator/run_tests.sh
-
+    casing:
+        runs-on: macos-latest
+        strategy:
+            matrix:
+                php: [ "8.0" ]
+        name: Casing Conflict Test
+        steps:
+            - uses: actions/checkout@v2
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
+              with:
+                php-version: ${{ matrix.php }}
+            - name: Run Script
+              run: git diff-index --quiet HEAD --
