chore: fix contains in auto-approve workflow (#695)

--- a/.github/workflows/auto-approve.yaml
+++ b/.github/workflows/auto-approve.yaml
@@ -20,7 +20,7 @@ name: auto-approve
 jobs:
   approve:
     runs-on: ubuntu-latest
-    if: contains(github.head_ref, 'Regenerate ')
+    if: contains(github.head_ref, ':regenerate-')
     steps:
       - uses: actions/github-script@v6.0.0
         with:
