--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
         strategy:
             matrix:
                 os: [ubuntu-latest]
-                php: [ 5.6, "7.0", 7.1, 7.2, 7.3, 7.4, "8.0" ]
+                php: [ 5.6, "7.0", 7.1, 7.2, 7.3, 7.4, "8.0", 8.1 ]
                 include:
                   - os: macos-latest
                     php: "8.0"
