--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -10,12 +10,12 @@ jobs:
     uses: googleapis/discovery-artifact-manager/.github/workflows/list-services.yml@master
 
   generate:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: discovery
     strategy:
       fail-fast: false
       max-parallel: 4
-      matrix: 
+      matrix:
         service: ${{fromJson(needs.discovery.outputs.services)}}
         exclude:
           - service: discovery
