--- a/.github/workflows/codegen.yml
+++ b/.github/workflows/codegen.yml
@@ -95,7 +95,7 @@ jobs:
           path: discovery-artifact-manager
       - uses: actions/setup-python@v4
         with:
-          python-version: 2.7
+          python-version: "3.10"
       - id: find-preferred-versions
         run: |
           versions=$( cat discovery-artifact-manager/discoveries/index.json | jq -r '[.items[] | select(.name == "${{ matrix.service }}") | select(.name == "admin" or .preferred).version] | join(",")' )
